# MCP_Paperless_ngx

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp_client.py  pyproject.toml
examples/: create_lookup.txt  get_document.txt  lookup_calls.txt  update_document.txt  upload_document.txt
src/mcp_paperless_ngx/: __init__.py  app.py  config.py  http_client.py  lookups.py  server.py  tools.py  utils.py
tests/: test_healthcheck.py
tests/system/: test_remote_mcp.py
