[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-paperless-ngx"
version = "0.1.0"
description = "MCP server for Paperless-ngx"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
  "mcp>=1.13.0,<2.0.0",
  "httpx>=0.27.0,<0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
]

[project.scripts]
mcp-paperless-ngx = "mcp_paperless_ngx.server:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "system: requires a running MCP server",
]
